[gd_scene load_steps=3 format=3 uid="uid://bs17f56clvykk"]

[ext_resource type="Script" path="res://scenes/scripts/SpaceGravityTrigger.gd" id="1_l55ru"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1bqs"]
size = Vector2(2000, 1010.71)

[node name="SpaceGravityTrigger" type="Node2D"]
process_mode = 3
script = ExtResource("1_l55ru")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7, 4267)
scale = Vector2(8.4, 8.4)
shape = SubResource("RectangleShape2D_o1bqs")
debug_color = Color(0.929412, 0.984314, 1, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
